lib/askar/askar_native_functions.dart


typedef AskarStoreGetProfileNameNative = Int32 Function(
  NativeStoreHandle handle,
  Pointer<NativeFunction<AskarStoreGetProfileNameCallback>> cb,
  Int64 cb_id,
);

final int Function(
  int handle,
  Pointer<NativeFunction<AskarStoreGetProfileNameCallback>> cb,
  int cb_id,
) nativeAskarStoreGetProfileName = nativeLib
    .lookup<NativeFunction<AskarStoreGetProfileNameNative>>(
        'askar_store_get_profile_name')
    .asFunction();

typedef AskarStoreGetDefaultProfileCallback = Void Function(
  Int64 cb_id,
  Int32 err,
  Pointer<Utf8> profile,
);

typedef AskarStoreGetDefaultProfileNative = Int32 Function(
  NativeStoreHandle handle,
  Pointer<NativeFunction<AskarStoreGetDefaultProfileCallback>> cb,
  Int64 cb_id,
);

final int Function(
  StoreHandle handle,
  Pointer<NativeFunction<AskarStoreGetDefaultProfileCallback>> cb,
  int cb_id,
) nativeAskarStoreGetDefaultProfile = nativeLib
    .lookup<NativeFunction<AskarStoreGetDefaultProfileNative>>(
        'askar_store_get_default_profile')
    .asFunction();

typedef AskarStoreListProfilesCallback = Void Function(
  Int64 cb_id,
  Int32 err,
  NativeStringListHandle results,
);

typedef AskarStoreListProfilesNative = Int32 Function(
  NativeStoreHandle handle,
  Pointer<NativeFunction<AskarStoreListProfilesCallback>> cb,
  Int64 cb_id,
);

final int Function(
  int handle,
  Pointer<NativeFunction<AskarStoreListProfilesCallback>> cb,
  int cb_id,
) nativeAskarStoreListProfiles = nativeLib
    .lookup<NativeFunction<AskarStoreListProfilesNative>>('askar_store_list_profiles')
    .asFunction();

typedef AskarStoreOpenCallback = Void Function(
  Int64 cb_id,
  Int32 err,
  NativeStoreHandle handle,
);

typedef AskarStoreOpenNative = Int32 Function(
  Pointer<Utf8> spec_uri,
  Pointer<Utf8> key_method,
  Pointer<Utf8> pass_key,
  Pointer<Utf8> profile,
  Pointer<NativeFunction<Void Function(Int64, Int32, NativeStoreHandle)>> cb,
  Int64 cb_id,
);

final int Function(
  Pointer<Utf8> spec_uri,
  Pointer<Utf8> key_method,
  Pointer<Utf8> pass_key,
  Pointer<Utf8> profile,
  Pointer<NativeFunction<Void Function(Int64, Int32, NativeStoreHandle)>> cb,
  int cb_id,
) nativeAskarStoreOpen = nativeLib
    .lookup<NativeFunction<AskarStoreOpenNative>>('askar_store_open')
    .asFunction();

typedef ProvisionCallback = Void Function(
    NativeCallbackId a, Int32 b, NativeStoreHandle c);

typedef AskarStoreProvisionNative = Int32 Function(
  Pointer<Utf8> spec_uri,
  Pointer<Utf8> key_method,
  Pointer<Utf8> pass_key,
  Pointer<Utf8> profile,
  Int8 recreate,
  Pointer<NativeFunction<ProvisionCallback>> cb,
  NativeCallbackId cb_id,
);

final int Function(
  Pointer<Utf8> spec_uri,
  Pointer<Utf8> key_method,
  Pointer<Utf8> pass_key,
  Pointer<Utf8> profile,
  int recreate,
  Pointer<NativeFunction<ProvisionCallback>> cb,
  int cb_id,
) nativeAskarStoreProvision = nativeLib
    .lookup<NativeFunction<AskarStoreProvisionNative>>('askar_store_provision')
    .asFunction();

typedef AskarStoreRekeyCallback = Void Function(
  Int64 cb_id,
  Int32 err,
);

typedef AskarStoreRekeyNative = Int32 Function(
  NativeStoreHandle handle,
  Pointer<Utf8> key_method,
  Pointer<Utf8> pass_key,
  Pointer<NativeFunction<AskarStoreRekeyCallback>> cb,
  Int64 cb_id,
);

final int Function(
  StoreHandle handle,
  Pointer<Utf8> key_method,
  Pointer<Utf8> pass_key,
  Pointer<NativeFunction<AskarStoreRekeyCallback>> cb,
  int cb_id,
) nativeAskarStoreRekey = nativeLib
    .lookup<NativeFunction<AskarStoreRekeyNative>>('askar_store_rekey')
    .asFunction();

typedef AskarStoreRemoveCallback = Void Function(
  Int64 cb_id,
  Int32 err,
  Int8 removed,
);

typedef AskarStoreRemoveNative = Int32 Function(
  Pointer<Utf8> spec_uri,
  Pointer<NativeFunction<AskarStoreRemoveCallback>> cb,
  Int64 cb_id,
);

final int Function(
  Pointer<Utf8> spec_uri,
  Pointer<NativeFunction<AskarStoreRemoveCallback>> cb,
  int cb_id,
) nativeAskarStoreRemove = nativeLib
    .lookup<NativeFunction<AskarStoreRemoveNative>>('askar_store_remove')
    .asFunction();

typedef AskarStoreRemoveProfileCallback = Void Function(
  Int64 cb_id,
  Int32 err,
  Int8 removed,
);

typedef AskarStoreRemoveProfileNative = Int32 Function(
  NativeStoreHandle handle,
  Pointer<Utf8> profile,
  Pointer<NativeFunction<AskarStoreRemoveProfileCallback>> cb,
  Int64 cb_id,
);

final int Function(
  StoreHandle handle,
  Pointer<Utf8> profile,
  Pointer<NativeFunction<AskarStoreRemoveProfileCallback>> cb,
  int cb_id,
) nativeAskarStoreRemoveProfile = nativeLib
    .lookup<NativeFunction<AskarStoreRemoveProfileNative>>('askar_store_remove_profile')
    .asFunction();

typedef AskarStoreSetDefaultProfileCallback = Void Function(
  Int64 cb_id,
  Int32 err,
);

typedef AskarStoreSetDefaultProfileNative = Int32 Function(
  NativeStoreHandle handle,
  Pointer<Utf8> profile,
  Pointer<NativeFunction<AskarStoreSetDefaultProfileCallback>> cb,
  Int64 cb_id,
);

final int Function(
  StoreHandle handle,
  Pointer<Utf8> profile,
  Pointer<NativeFunction<AskarStoreSetDefaultProfileCallback>> cb,
  int cb_id,
) nativeAskarStoreSetDefaultProfile = nativeLib
    .lookup<NativeFunction<AskarStoreSetDefaultProfileNative>>(
        'askar_store_set_default_profile')
    .asFunction();

typedef AskarMigrateIndySdkCallback = Void Function(
  Int64 cb_id,
  Int32 err,
);

typedef AskarMigrateIndySdkNative = Int32 Function(
  Pointer<Utf8> spec_uri,
  Pointer<Utf8> wallet_name,
  Pointer<Utf8> wallet_key,
  Pointer<Utf8> kdf_level,
  Pointer<NativeFunction<AskarMigrateIndySdkCallback>> cb,
  Int64 cb_id,
);

final int Function(
  Pointer<Utf8> spec_uri,
  Pointer<Utf8> wallet_name,
  Pointer<Utf8> wallet_key,
  Pointer<Utf8> kdf_level,
  Pointer<NativeFunction<AskarMigrateIndySdkCallback>> cb,
  int cb_id,
) nativeAskarMigrateIndySdk = nativeLib
    .lookup<NativeFunction<AskarMigrateIndySdkNative>>('askar_migrate_indy_sdk')
    .asFunction();
